# OpenQL

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.build  Jenkinsfile  Jenkinsfile-master  Jenkinsfile-v2.2.0  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  TODO  cleanme.py  coding_style.md  conanfile.py  configuration_specification.md  contributors  instructions.map  license  makefile  pytest.ini  readme  requirements-docs.txt  setup.py  sparse-checkout.sh  update.sh  version.py
examples/: .gitignore  CMakeLists.txt  circuit7.cc  dice.py  getting_started.py  grover.py  multi_qubits_randomized_benchmarking.cc  randomized_benchmarking.cc  rb_single.cc  rb_single.py  simple.cc  simple.py
examples/cpp-standalone-example/: CMakeLists.txt  example.cc  example.py  test_multi_core_4x4_full.json
examples/diamond/: README.md  gateset.json  test.py
examples/notebooks/: ccLightClassicalDemo.ipynb
examples/scaffCC/: square_root.cc
openql/: CCL_platform.json  CMakeLists.txt  __init__.py  apiTest.cc  hardware_config_cbox.json  makefile  openql.h  openql.i  openql.py  openql_wrap.cxx  pyQisaAs.py  quick_feature_test.cc  quick_feature_test.makefile  quick_feature_test.py  test.cc  test.py
programs/: CMakeLists.txt  circuit7.cc  getting_started.py  hardware_config_cbox.json  hardware_config_qx.json  instructions.map  multi_qubits_randomized_benchmarking.cc  randomized_benchmarking  randomized_benchmarking.cc  rb_single  rb_single.cc  rb_single.py  simple  simple.cc
programs/scaffCC/: square_root.cc
python/: CMakeLists.txt  __init__.py  openql.i  python_lib.py
python/compat/: UseSWIG.cmake  fix-swig-cmdline.py
python/manylinux/: .gitignore  Dockerfile  Makefile  README.md  build.sh  helper.sh
python/openql/: __init__.py
src/: CImg.h  CMakeLists.txt  buffer_insertion.cc  buffer_insertion.h  circuit.cc  circuit.h  classical.cc  classical.h  clifford.cc  clifford.h  commute_variation.cc  commute_variation.h  compile_options.h  compiler.cc  compiler.h  compiler_validator.py  decompose_toffoli.cc  decompose_toffoli.h  eqasm_compiler.cc  eqasm_compiler.h  exception.cc  exception.h  gate.cc  gate.h  gate_visual.h  hardware_configuration.cc  hardware_configuration.h  instruction_map.h  interactionMatrix.cc  interactionMatrix.h  ir.cc  ir.h  json.h  kernel.cc  kernel.h  latency_compensation.cc  latency_compensation.h  mapper.cc  mapper.h  matrix.h  (+51 more)
src/arch/: allxy.cc  cbox_eqasm_compiler.cc  cbox_eqasm_compiler.h  cc_light_eqasm.cc  cc_light_eqasm_compiler.h  cc_light_resource_manager.h  cc_light_scheduler.h  instruction_scheduler.h  quantumsim_eqasm_compiler.h  qumis.h  spin_demo_2811.json
src/attic/: qasm_loader.cc
src/cqasm/: cqasm_reader.cc  cqasm_reader.h
src/passes/: passes.cc  passes.h  passmanager.cc  passmanager.h
src/ql/: CMakeLists.txt  config.h.template
src/resource/: main.cpp
src/utils/: compat.h  container_base.h  exception.cc  exception.h  filesystem.cc  filesystem.h  json.cc  json.h  list.h  logger.cc  logger.h  logging.h  map.h  misc.h  num.cc  num.h  opt.h  pair.h  ptr.h  str.cc  str.h  strings.cc  strings.h  tree.h  umap.h  vcd.cc  vcd.h  vec.h
swig/: CMakeLists.txt  openql.i  openql.py  openql_i.h  quick_feature_test.cc  quick_feature_test.makefile
swig/openql/: __init__.py
test/: CMakeLists.txt  main.cpp
test/ql/: CMakeLists.txt
tests/: CBox_Assembler.py  CMakeLists.txt  cbox_backend_test.py  cbox_spin_qubit_demo.json  cclight_compiler_cfg.json  constraints_configuration_quantumsim_sc17.json  custom_instruction_test.cc  getting_started.py  hardware_config_cbox.json  hardware_config_cc_light.json  hardware_config_cc_light17.json  hardware_config_cc_light_s17.json  hardware_config_cc_light_visualizer.json  hardware_config_qx.json  hwcfg_cc_light_modular.json  instruction_map.cc  instructions.json  instructions_config_new.json  program_test.cc  qasm_loader_test.cc  qs.json  quantum_platform_test.cc  qubitsTest.py  qubits_test.cc  qx_compiler_cfg.json  simple2inputTest.cc  simplePyTest.py  spin_demo_2811.json  t_8_32.cc  test_179.cc  test_179.json  test_Kernel.py  test_Platform.py  test_Program.py  test_QASM_assembler_present.py  test_QISA_assembler_present.py  test_alap_rc_schedule.cc  test_alap_rc_schedule.json  test_alap_rc_schedule.py  test_barrier.py  (+92 more)
tests/cc/: CMakeLists.txt  cc_compiler_cfg.json  cc_s5_direct_iq.json  cc_s5_direct_iq_new.json  config_cc_s17_direct_iq.json  config_cc_s17_direct_iq_cqasm1.2.json  config_cc_s17_direct_iq_openql_0_10-saved.json  config_cc_s17_direct_iq_openql_0_10.json  cqasm_config_cc.json  test_cc.cc  test_cc.py  test_cc_cqasm.py  test_cc_uniform.cc  test_cfg_cc.json  test_cfg_cc_2syntaxes.json  test_cfg_cc_demo.json  test_cond_gate.cq  test_const_prop.cq  test_cqasm.py  test_looping.cq  test_nested_rus_angle_0.cq  test_rnd_proc.cq  test_rus_elements.cq
tests/cc_light/: test_std_experiments_CCL.py  test_wait.py
tests/compat/: spin_demo_2811.json  test_Program.py  test_basics.py  test_bugs.py  test_cc_light_long_duration.py  test_cfg_none_s7.json  test_condex.py  test_config_default.json  test_conjugate.py  test_cqasm_reader.py  test_exceptions.py  test_flux.py  test_minimal.py  test_options.py  test_parallel_triggers.py  test_qubits.py  test_skip.py  test_uniform_sched.py  test_unitary.py
tests/cqasm/: test_cqasm_reader.cc  test_cqasm_reader.py
tests/golden/: 1_qubit_unitary_decomp.qasm  AllXYLongDuration.qisa  AllXYLongDuration_last.qasm  basic.qasm  basic_scheduled.qasm  decompose_before_schedule_dec.cq  decompose_before_schedule_in.cq  decompose_before_schedule_sch.cq  diamond_api_diamond_codegen.dqasm  diamond_cqasm_diamond_codegen.dqasm  diamond_cqasm_scheduled.qasm  empty_infinite_loop_out.cq  structure_decomposition_for_out.cq  structure_decomposition_foreach_out.cq  test_1_ALAP.qisa  test_1_ALAP_last.qasm  test_1_qubit.qasm  test_2_qubit.qasm  test_3_qubit.qasm  test_7_ALAP.qisa  test_7_ALAP_last.qasm  test_RAR_Control.qasm  test_RAR_Control_ASAP.qasm  (+191 more)
(+1564 files in other folders)
